[gd_scene load_steps=18 format=2]

[ext_resource path="res://icons/solid_consonant.png" type="Texture" id=1]
[ext_resource path="res://icons/pngwing.com (3).png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/19413.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sprites/HUD/info-icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/HUD/back-icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Scenes/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://icons/soft_consonant_vowel.png" type="Texture" id=7]
[ext_resource path="res://icons/solid_consonant_vowel.png" type="Texture" id=8]
[ext_resource path="res://icons/soft_consonant.png" type="Texture" id=9]
[ext_resource path="res://Assets/Scenes/GameMode1.gd" type="Script" id=10]
[ext_resource path="res://icons/black-vignette.png" type="Texture" id=11]
[ext_resource path="res://icons/vignette-effect-png-2-transparent.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 120
outline_size = 1
outline_color = Color( 0, 0.329412, 0.423529, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "bad"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Sprite2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Sprite2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.298039, 0.627451, 0.0509804, 1 ), Color( 0.305882, 0.556863, 0.117647, 0 ) ]
}

[node name="GameMode1" type="Node2D"]
script = ExtResource( 10 )

[node name="MainControl" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.658824, 0.823529, 0.94902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainControl/ColorRect"]
visible = false
margin_left = 81.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
text = "Score: "

[node name="BackButton2" type="TextureButton" parent="MainControl/ColorRect"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 1608.0
margin_bottom = 1608.0
rect_scale = Vector2( 0.03, 0.03 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MainControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 80.0
margin_right = 512.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainControl/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_right = -90.0
color = Color( 0.254902, 0.239216, 0.239216, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="MainControl/Control/ColorRect"]
visible = false
modulate = Color( 0.941176, 0.180392, 0.180392, 1 )
self_modulate = Color( 0.847059, 0.117647, 0.117647, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -68.0
margin_right = 1614.0
margin_bottom = 1532.0
rect_scale = Vector2( 0.08, 0.08 )
texture_normal = ExtResource( 4 )

[node name="Button2" type="TextureButton" parent="MainControl/Control/ColorRect"]
visible = false
margin_left = 694.0
margin_right = 1294.0
margin_bottom = 600.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="MainControl/Control/ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainControl/Control/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.419608, 0.619608, 1 )
text = "БА"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="MainControl"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 260.0
margin_right = 512.0
margin_bottom = 404.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainControl/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_right = -90.0
color = Color( 0.192157, 0.184314, 0.184314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerHBox" type="HBoxContainer" parent="MainControl/Control2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainControl/Control2/ColorRect/AnswerHBox"]
margin_left = 25.0
margin_top = 21.0
margin_right = 160.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 3 )
text = "БО"

[node name="Label2" type="Label" parent="MainControl/Control2/ColorRect/AnswerHBox"]
margin_left = 175.0
margin_top = 21.0
margin_right = 312.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 3 )
text = "БА"

[node name="Label3" type="Label" parent="MainControl/Control2/ColorRect/AnswerHBox"]
margin_left = 327.0
margin_top = 21.0
margin_right = 466.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 3 )
text = "БЯ"

[node name="Label4" type="Label" parent="MainControl/Control2/ColorRect/AnswerHBox"]
margin_left = 481.0
margin_top = 21.0
margin_right = 644.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 3 )
text = "БЮ"

[node name="Label5" type="Label" parent="MainControl/Control2/ColorRect/AnswerHBox"]
margin_left = 659.0
margin_top = 21.0
margin_right = 818.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 3 )
text = "БЫ"

[node name="Control3" type="Control" parent="MainControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 431.0
margin_right = 512.0
margin_bottom = 575.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainControl/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_right = -30.0
margin_bottom = 1.0
color = Color( 0.52549, 0.768627, 0.92549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionHBox" type="HBoxContainer" parent="MainControl/Control3/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
size_flags_horizontal = 3
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureButton" parent="MainControl/Control3/ColorRect/OptionHBox"]
margin_left = 112.0
margin_top = 22.0
margin_right = 212.0
margin_bottom = 122.0
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
stretch_mode = 3

[node name="TextureRect3" type="TextureButton" parent="MainControl/Control3/ColorRect/OptionHBox"]
margin_left = 252.0
margin_top = 22.0
margin_right = 452.0
margin_bottom = 123.0
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
stretch_mode = 3

[node name="TextureRect4" type="TextureButton" parent="MainControl/Control3/ColorRect/OptionHBox"]
margin_left = 492.0
margin_top = 22.0
margin_right = 592.0
margin_bottom = 123.0
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
stretch_mode = 3

[node name="TextureRect5" type="TextureButton" parent="MainControl/Control3/ColorRect/OptionHBox"]
margin_left = 632.0
margin_top = 22.0
margin_right = 832.0
margin_bottom = 123.0
size_flags_vertical = 4
texture_normal = ExtResource( 8 )
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainControl"]
anims/bad = SubResource( 4 )
anims/good = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="MainControl/AnimationPlayer"]
visible = false
modulate = Color( 0.438431, 0.701961, 0.240784, 0.8 )
self_modulate = Color( 0.380392, 0.996078, 0, 1 )
scale = Vector2( 0.64, 0.5 )
texture = ExtResource( 11 )
offset = Vector2( 800, 600 )

[node name="Sprite2" type="Sprite" parent="MainControl/AnimationPlayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 512, 300 )
scale = Vector2( 1.6, 1.5 )
texture = ExtResource( 12 )

[node name="HUD" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="MainControl/ColorRect/BackButton2" to="." method="_on_BackButton2_pressed"]
[connection signal="pressed" from="MainControl/Control/ColorRect/Button" to="." method="_on_Reset_Button_pressed"]
[connection signal="pressed" from="MainControl/Control/ColorRect/Button2" to="." method="_on_Go_Button_pressed"]
[connection signal="pressed" from="MainControl/Control3/ColorRect/OptionHBox/TextureRect2" to="." method="_on_Answer_Button_pressed" binds= [ "soft" ]]
[connection signal="pressed" from="MainControl/Control3/ColorRect/OptionHBox/TextureRect3" to="." method="_on_Answer_Button_pressed" binds= [ "soft_consonant_vowel" ]]
[connection signal="pressed" from="MainControl/Control3/ColorRect/OptionHBox/TextureRect4" to="." method="_on_Answer_Button_pressed" binds= [ "solid" ]]
[connection signal="pressed" from="MainControl/Control3/ColorRect/OptionHBox/TextureRect5" to="." method="_on_Answer_Button_pressed" binds= [ "solid_consonant_vowel" ]]
[connection signal="back" from="HUD" to="." method="_on_HUD_back"]
[connection signal="help" from="HUD" to="." method="_on_HUD_help"]
